# semantle

./: Cargo.toml
src/: in.txt  main.rs
