[package]
name = "semantle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
finalfusion = "0.18.0"
itertools = "0.11.0"
ndarray = "0.15.6"
rand = "0.8.5"
rust2vec = "0.5.2"
rust_decimal = "1.32.0"
rustyline = "12.0.0"
term_size = "0.3.2"
